# weebmachine

./: Cargo.toml  readme.md
src/: main.rs  mal.rs
