[package]
name = "weebmachine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
reqwest = "0.11"
roux = "2"
regex = "1.6"
serenity = "0.11"